--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,11 @@
+application.mail.lateloans.message=Atencao! Voce tem um emprestimo atrasado!
+application.mail.default-remetent=mail@library-api.com
 
+spring.mail.protocol=smtp
+spring.mail.host=sandbox.smtp.mailtrap.io
+spring.mail.port=25
+spring.mail.username=40276470184d8e
+spring.mail.password=2d6c85a2a014ff
+
+spring.mail.properties.mail.smtp.auth = true
+spring.mail.properties.mail.smtp.starttls.enable = true
